<resources>
    <string name="app_name">Med-Manager</string>
    <string name="action_settings">Settings</string>
    <string name="sign_in">Sign in with Google</string>
    <string name="logged_in">Logged in as Bethel</string>
    <string name="welcome">Welcome to Med-Manager</string>
    <string name="welcome_copy">Med-manager is an app that helps you remember to
        take your medication and provides tracking for the intake of the prescribed
        medication.</string>
    <string name="set_up">Set up your Profile</string>
    <string name="sample_name">Bethel Codes</string>
    <string name="sample_no">+234 **********</string>
    <string name="edit_tip">Please enter the following details</string>
    <string name="sample_med">PARACETAMOL</string>
    <string name="freq">2 x 3</string>
    <string name="start_date">15th July</string>
    <string name="start">Set Start Date</string>
    <string name="end_date">20th July</string>
    <string name="end">Set End Date</string>
    <string name="description">Helps in resolving aches and pains such..</string>
    <string name="main_description">Paracetamol helps in the rapid pain releive of
        head aches, migranes, and other basic body aches.</string>
    <string name="freq_a">Number of Tablets \n per Intake</string>
    <string name="freq_b">Number of times \n per day</string>
    <string name="total_no">Total Number of Tablets:</string>
    <string name="set_profile_pix">SET FROM GMAIL</string>
    <string name="sample_date">dd-mm-yyyy</string>

    <!-- Notification Strings -->
    <string name="main_notification_channel_name">Primary</string>
    <string name="medication_reminder_notification_title">Medication reminder</string>
    <string name="medication_reminder_notification_body">Click to view and take medication</string>

    <!-- Labels for months Category-->
    <string name="pref_month_label">Categorise by Month</string>

    <string name="pref_month_label_jan">January</string>
    <string name="pref_month_label_feb">February</string>
    <string name="pref_month_label_mar">March</string>
    <string name="pref_month_label_apr">April</string>
    <string name="pref_month_label_may">May</string>
    <string name="pref_month_label_jun">June</string>
    <string name="pref_month_label_jul">July</string>
    <string name="pref_month_label_aug">August</string>
    <string name="pref_month_label_sep">September</string>
    <string name="pref_month_label_oct">October</string>
    <string name="pref_month_label_nov">November</string>
    <string name="pref_month_label_dec">December</string>
    <string name="pref_month_label_all">All</string>

    <!-- values for months Category-->
    <string name="pref_month_key" translatable="false">month</string>

    <string name="pref_month_value_jan" translatable="false">january</string>
    <string name="pref_month_value_feb" translatable="false">february</string>
    <string name="pref_month_value_mar" translatable="false">march</string>
    <string name="pref_month_value_apr" translatable="false">april</string>
    <string name="pref_month_value_may" translatable="false">may</string>
    <string name="pref_month_value_jun" translatable="false">june</string>
    <string name="pref_month_value_jul" translatable="false">july</string>
    <string name="pref_month_value_aug" translatable="false">august</string>
    <string name="pref_month_value_sep" translatable="false">september</string>
    <string name="pref_month_value_oct" translatable="false">october</string>
    <string name="pref_month_value_nov" translatable="false">november</string>
    <string name="pref_month_value_dec" translatable="false">december</string>
    <string name="pref_month_value_all" translatable="false">all</string>

</resources>
