<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/welcome_bg">

    <TextView
        android:id="@+id/logged_in_as"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logged_in"
        android:textColor="@color/icons"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"/>

    <ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:src="@drawable/ic_med"
        android:alpha="0.5"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="28sp"
        android:textColor="@color/primary_text"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_copy"
        android:textAlignment="center"
        android:textColor="@color/primary_text"
        android:layout_margin="20dp"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/set_up_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorAccent"
        android:drawableLeft="@drawable/ic_account_circle_white_24dp"
        android:padding="10dp"
        android:text="@string/set_up"
        android:textColor="@color/icons"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/skip_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorAccent"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/icons"
        android:textSize="20sp"
        android:text="skip"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ALC 2.0"
        android:textColor="@color/primary_text"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>

</LinearLayout>