<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/primary_light">

        <include layout="@layout/app_bar"
            android:id="@+id/add_med_app_bar"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="40dp"
            android:text="DRUG NAME:"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/drug_name_edtxt"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/custom_layout_bg"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="40dp"
            android:text="DESCRIPTION:"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/description_txt"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/custom_layout_bg"
            android:gravity="top"
            android:inputType="text|textMultiLine" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="40dp"
            android:text="FREQUENCY:"
            android:textSize="16dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/primary_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:text="@string/freq_a"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/custom_layout_bg"
                    android:padding="5dp">

                    <EditText
                        android:clickable="false"
                        android:inputType="number"
                        android:id="@+id/tabs_per_intake_edtxt"
                        android:layout_width="40dp"
                        android:layout_height="50dp"
                        android:background="@color/icons"
                        android:hint="01"
                        android:paddingLeft="5dp"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/divider"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/ic_navup_tabs_per_intake"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/ic_arrow_drop_up_black_24dp" />

                        <ImageView
                            android:id="@+id/ic_navdown_tabs_per_intake"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/ic_arrow_drop_down_black_24dp" />
                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/primary_text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:text="@string/freq_b"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/custom_layout_bg"
                    android:padding="5dp">

                    <EditText
                        android:clickable="false"
                        android:inputType="number"
                        android:id="@+id/times_per_day_edtxt"
                        android:layout_width="40dp"
                        android:layout_height="50dp"
                        android:background="@color/icons"
                        android:hint="02"
                        android:paddingLeft="5dp"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/divider"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/ic_navup_times_per_day"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/ic_arrow_drop_up_black_24dp" />

                        <ImageView
                            android:id="@+id/ic_navdown_times_per_day"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/ic_arrow_drop_down_black_24dp" />
                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="5dp"
            android:background="@color/primary_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/start_date"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="25sp"
                android:textStyle="bold"
                android:text="@string/sample_date"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"/>

            <Button
                android:id="@+id/start_date_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="40dp"
                android:layout_marginLeft="40dp"
                android:textColor="@color/icons"
                android:background="@color/colorPrimary"
                android:text="@string/start"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@color/primary_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/end_date"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="25sp"
                android:textStyle="bold"
                android:text="@string/sample_date"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"/>

            <Button
                android:id="@+id/end_date_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="40dp"
                android:layout_marginLeft="40dp"
                android:textColor="@color/icons"
                android:background="@color/colorPrimary"
                android:text="@string/end"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/primary_text" />

        <Button
            android:id="@+id/add_med_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:background="@color/colorAccent"
            android:text="Add Medication"
            android:textColor="@color/icons"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>