<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#eeeeee">

    <include
        layout="@layout/app_bar"
        android:id="@+id/med_details_toolbar"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="@color/secondary_text"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:padding="5dp"
        android:orientation="vertical"
        android:background="@color/icons">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:text="DESCRIPTION:"
            android:textSize="22dp" />

        <TextView
            android:id="@+id/details_description"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/main_description"
            android:textSize="20sp"
            android:textAlignment="center"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/secondary_text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="MED-MANAGER"
        android:layout_margin="10dp"
        android:textSize="25sp"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="280dp"
        android:orientation="vertical"
        android:background="@color/icons">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/secondary_text"/>

        <LinearLayout
            android:layout_marginTop="7dp"
            android:layout_width="match_parent"
            android:layout_height="135dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/freq_a"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    android:layout_marginTop="5dp"/>

                <TextView
                    android:id="@+id/details_tabs_per_intake"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="50sp"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"/>
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_height="match_parent"
                android:background="@color/secondary_text"/>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/freq_b"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    android:layout_marginTop="5dp"/>

                <TextView
                    android:id="@+id/details_times_per_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2"
                    android:textSize="50sp"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_marginTop="10dp"/>
            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/secondary_text"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="135dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Start Date"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:id="@+id/details_start_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="18-4-2018"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="20dp"/>
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_height="match_parent"
                android:background="@color/secondary_text"/>

            <LinearLayout
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="End Date"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:id="@+id/details_end_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="21-4-2018"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"/>
            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/secondary_text"/>
    </LinearLayout>

</LinearLayout>